--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SampleReact",
+  "name": "reacttest",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,19 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.63.0",
-    "react-native-nfc-card-reader": "^1.0.0"
+    "react": "17.0.2",
+    "react-native": "0.66.4",
+    "react-native-nfc-card-reader": "^1.0.5"
   },
   "devDependencies": {
-    "@babel/core": "7.10.4",
-    "@babel/runtime": "7.10.4",
-    "@react-native-community/eslint-config": "1.1.0",
-    "babel-jest": "25.5.1",
-    "eslint": "6.8.0",
-    "jest": "25.5.4",
-    "metro-react-native-babel-preset": "0.59.0",
-    "react-test-renderer": "16.13.1"
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
